--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "author": "Hess <hessro@oregonstate.edu>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^29.5.0"
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^21.1.2"
   }
 }
